--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -3,9 +3,86 @@ title = "Het Paard Ziet Jou"
 linkTitle = "Het Paard Ziet Jou"
 
 +++
-
-{{< blocks/cover title="Het Paard Ziet Jou" image_anchor="center" height="full"  >}}
-PaardenCoaching
+{{< blocks/cover title="HET PAARD ZIET JOU" image_anchor="center" height="full"  >}}
+<h3>Coaching met paarden voor kinderen, jongeren en volwassenen</h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Gezien worden, je gezien voelen, mogen zijn wie je bent…</h2><br>
+<div class="mx-auto mt-5">
+  {{< blocks/link-down color="secondary" >}}
+</div>
 {{< /blocks/cover >}}
 
+{{% blocks/lead %}}
+<h2>
+Jezelf mogen zijn is het mooiste wat er is.<br>Een paard kijkt niet naar de buitenkant. 
+  Het paard ziet <b>jou</b>.
+<br>
+Coaching met paarden geeft je de mogelijkheid jezelf te ontmoeten.
+<br>
+</h2>
+{{% /blocks/lead %}}
 
+{{< blocks/section >}}
+
+{{% blocks/feature icon="none" %}}
+<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/coaching" >}}">
+  Meer over <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+</a>
+<h2 class="text-center">Coaching met paarden</h2>
+{{% /blocks/feature %}}
+
+{{% blocks/feature icon="none" %}}
+<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/kindercoaching" >}}">
+  Meer over <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+</a>
+<h2 class="text-center">Kindercoaching</h2>
+{{% /blocks/feature %}}
+
+{{% blocks/feature icon="none" %}}
+<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/waarommetpaarden" >}}">
+  Meer over <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+</a>
+<h2 class="text-center">Waarom met paarden</h2>
+{{% /blocks/feature %}}
+
+{{< /blocks/section >}}
+
+{{< blocks/section color="white" >}}
+{{% blocks/feature icon="none" %}}
+<img src="/hetpaardzietjou.png" height="100"><br><br>
+<i class="fa fa-envelope ml-2 "></i> hetpaardzietjou@gmail.com
+<br>
+<a href="https://www.facebook.com/HetPaardZietJou">
+  <i class="fab fa-facebook ml-2 "></i> Facebook 
+</a><br>
+<a href="https://www.instagram.com/hetpaardzietjou/">
+  <i class="fab fa-instagram ml-2 "></i> Instagram 
+</a>
+{{% /blocks/feature %}}
+{{% blocks/feature icon="none" %}}
+HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br>GZ-psycholoog BIG register 99050272225<br>
+Equine Assisted Coach Kreact 19200411<br>
+Zorg voor ZZP (WKKGZ) 201900937<br>
+Kamer van Koophandel 82539596
+<br><br>
+<a href="algemenevoorwaarden_hetpaardzietjou.pdf">
+  Algemene Voorwaarden 
+</a>
+{{% /blocks/feature %}}
+{{% blocks/feature icon="none" %}}
+HET PAARD ZIET JOU maakt deel uit van:
+<br><br>
+<a href="https://www.coachesvoorjou.nl">
+  <img src="/coachesvoorjou.png" height="100"> 
+</a>
+{{% /blocks/feature %}}
+{{< /blocks/section >}}
