--- a/public/404.html
+++ b/public/404.html
@@ -18,14 +18,14 @@
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png" sizes="192x192">
 
 <title>404 Page not found | Het Paard Ziet Jou</title><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="A Docsy example site" />
+<meta property="og:description" content="Coaching met Paarden" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" /><meta property="og:site_name" content="Het Paard Ziet Jou" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="A Docsy example site"><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="Coaching met Paarden"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="A Docsy example site"/>
+<meta name="twitter:description" content="Coaching met Paarden"/>
 
 
 
