--- a/public/coaching/index.html
+++ b/public/coaching/index.html
@@ -19,15 +19,15 @@
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png" sizes="192x192">
 
 <title>Coaching | Het Paard Ziet Jou</title><meta property="og:title" content="Coaching" />
-<meta property="og:description" content="A Docsy example site" />
+<meta property="og:description" content="Coaching met Paarden" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/coaching/" /><meta property="og:image" content="/coaching/featured-background.jpg"/><meta property="og:site_name" content="Het Paard Ziet Jou" />
 
 <meta itemprop="name" content="Coaching">
-<meta itemprop="description" content="A Docsy example site"><meta name="twitter:card" content="summary_large_image"/>
+<meta itemprop="description" content="Coaching met Paarden"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/coaching/featured-background.jpg"/>
 <meta name="twitter:title" content="Coaching"/>
-<meta name="twitter:description" content="A Docsy example site"/>
+<meta name="twitter:description" content="Coaching met Paarden"/>
 
 
 
