--- a/public/index.html
+++ b/public/index.html
@@ -18,15 +18,15 @@
 <link rel="icon" type="image/png" href="/favicons/android-144x144.png" sizes="144x144">
 <link rel="icon" type="image/png" href="/favicons/android-192x192.png" sizes="192x192">
 
-<title>HET PAARD ZIET JOU</title><meta property="og:title" content="Het Paard Ziet Jou" />
+<title>HET PAARD ZIET JOU</title><meta property="og:title" content="HET PAARD ZIET JOU" />
 <meta property="og:description" content="Coaching met Paarden" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" /><meta property="og:image" content="/featured-background.jpg"/><meta property="og:site_name" content="HET PAARD ZIET JOU" />
 
-<meta itemprop="name" content="Het Paard Ziet Jou">
+<meta itemprop="name" content="HET PAARD ZIET JOU">
 <meta itemprop="description" content="Coaching met Paarden"><meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/featured-background.jpg"/>
-<meta name="twitter:title" content="Het Paard Ziet Jou"/>
+<meta name="twitter:title" content="HET PAARD ZIET JOU"/>
 <meta name="twitter:description" content="Coaching met Paarden"/>
 
 
@@ -345,6 +345,7 @@ Algemene Voorwaarden
 		</div>
 	</div>
 </section>
+
 
 
 
