--- a/content/en/coaching/_index.html
+++ b/content/en/coaching/_index.html
@@ -27,7 +27,7 @@ Wanneer je al een tijdje niet lekker in je vel zit, help ik je graag, samen met 
 <div class="col-sm -text-dark">
   <h3>
     Als <b>psycholoog en coach</b> bied ik je vanuit rust, gelijkwaardigheid en vertrouwen de ruimte om samen met de paarden jouw weg te ontdekken rondom <b>thema’s</b> zoals:
-<br><br>
+<br><br><br>
 <ul>
 <li>Vergroten van je zelfbewustzijn</li>
 <li>Keuzes maken die bij jou passen</li>
@@ -46,7 +46,8 @@ Wanneer je al een tijdje niet lekker in je vel zit, help ik je graag, samen met 
   Het paard helpt je om <b>dichter bij je gevoel</b> te komen en te ontdekken wat jouw innerlijke kracht en waarden zijn.
   <br>Door activiteiten met paarden uit te voeren, krijg je <b>inzicht</b> in patronen in jouw gedrag en denken. De observaties die ik als coach zie, geef ik je op een constructieve manier terug. In de coachsessie krijg je de mogelijkheid om te experimenteren met nieuw gedrag en zo patronen te doorbreken.<br><br>
 
-De sessie met het paard helpt je de mogelijkheden in jezelf en situaties te herkennen en te benutten. Ik ben ervan overtuigd dat er geen pasklare antwoorden zijn en iedereen diep van binnen weet welke oplossing past. Het gaat om het ontwikkelen van jouw <b>‘eigen wijsheid’</b> en jouw <b>zelfvertrouwen</b>.
+De sessie met het paard helpt je de mogelijkheden in jezelf en situaties te herkennen en te benutten.
+<br>Ik ben ervan overtuigd dat er geen pasklare antwoorden zijn en iedereen diep van binnen weet welke oplossing past. Het gaat om het ontwikkelen van jouw <b>‘eigen wijsheid’</b> en jouw <b>zelfvertrouwen</b>.
 </h3>
 </div>
 
@@ -87,7 +88,7 @@ De sessie met het paard helpt je de mogelijkheden in jezelf en situaties te herk
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
 HET PAARD ZIET JOU is geregistreerd bij:<br>
-<br>GZ-psycholoog BIG register 99050272225<br>
+<br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
 Kamer van Koophandel 82539596
