--- a/content/en/kindercoaching/_index.html
+++ b/content/en/kindercoaching/_index.html
@@ -39,13 +39,14 @@ menu:
 <li>Meegemaakte gebeurtenissen als scheiding, pesten, verlies en rouw</li>
 </ul>
 Paarden zijn <b>open</b> en <b>eerlijk</b> en hebben <b>onvoorwaardelijk</b> lief. Ze kunnen een maatje zijn en het kind steunen en rust brengen.
+<br>Vanuit die <b>rust</b> krijgt het kind kans om te ervaren wat het zelf kan, wat het zelf wil en hoe om te gaan met de ander.
 
 </h3>
 </div>
 <div class="col-sm -text-dark">
 <h3>
-    Vanuit die <b>rust</b> krijgt het kind kans om te ervaren wat het zelf kan, wat het zelf wil en hoe om te gaan met de ander.
-<br><br>Daarnaast kan het kind in de omgang met het paard <b>vaardigheden oefenen</b> en via de reactie van het paard, krijgt het kind direct feedback.
+    
+Kinderen en jongeren kunnen in de omgang met het paard <b>vaardigheden oefenen</b> en via de reactie van het paard, krijgt het kind direct feedback.
 <br><br>Omdat coaching met paarden <b>ervaringsgericht leren</b> is, hoeft er minder gepraat te worden. Dit biedt een andere manier van leren dan het schoolse leren. Bovendien is het een optie voor kinderen en jongeren die het niet fijn vinden om te zitten en te praten.
 <br><br>Buiten in de natuur <b>zonder de dagelijkse stress en prikkels</b>, en geaccepteerd door het paard, hoeft het kind minder zijn muurtjes op te houden als afweer en zelfbescherming. Dan is er meer ruimte om te denken in oplossingen en te voelen wat er gebeurt.
 <br><br>Behalve individuele coaching, bied ik ook ouder-kindcoaching. Door samen met je kind te werken met paarden, kun je thema’s zoals verbinding, communicatie en vertrouwen onderzoeken en ontstaat er ruimte voor begrip, (h)erkenning en verandering.
@@ -93,7 +94,7 @@ Paarden zijn <b>open</b> en <b>eerlijk</b> en hebben <b>onvoorwaardelijk</b> lie
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
 HET PAARD ZIET JOU is geregistreerd bij:<br>
-<br>GZ-psycholoog BIG register 99050272225<br>
+<br><br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
 Kamer van Koophandel 82539596
