--- a/content/en/waarommetpaarden/_index.html
+++ b/content/en/waarommetpaarden/_index.html
@@ -30,13 +30,16 @@ Het paard is mijn mede-coach, mijn kompas.
 <br>Paarden zijn <b>in het hier en nu</b> en <b>zonder oordeel</b>. Het paard helpt mij me te richten op wat zich nu voordoet. En datgene wat zich nu voordoet is van belang; daarom dient het zich aan.
 <br><br>Paarden zijn van nature kudde- en prooidieren. Ze zijn daardoor <b>gericht op een relatie met de ander</b> en <b>gevoelig voor non-verbale communicatie</b> zoals lichaamshouding, energie, intentie en ademhaling.
 <br><br>Die gevoeligheid van paarden maakt ze bijzonder. Ze <b>reageren op je emoties</b> omdat ze in de kudde gericht zijn op het welzijn van de ander. En als hetgeen je zegt of doet niet overeenkomt met wat je voelt en denkt, zal een paard hierop reageren. Daarmee geeft het paard je een <b>spiegel</b> om naar je zelf te kijken.
-<br><br>Coaching met paarden is zo krachtig omdat je in de ervaring vindt, wat je nog niet in woorden kan vatten. Het geeft je de kans om <b>de missing-link tussen hoofd en gevoel</b> te vinden. En de meeste coachvragen ontstaan juist bij het niet-verbinden van hoofd en gevoel. 
+<br><br>Coaching met paarden is zo krachtig omdat je in de ervaring vindt, wat je nog niet in woorden kan vatten. Het geeft je de kans om <b>de missing-link tussen hoofd en gevoel</b> te vinden. En de meeste coachvragen ontstaan juist bij het niet-verbinden van hoofd en gevoel.
+<br><br>Coaching met paarden is <b>ervaringsgericht leren</b>. In de activiteit met het paard, krijg je de kans ervaringen op te doen en te merken wat het paard bij je oproept.
+  
 </div>
 <div class="col-sm -text-dark">
 <h3>
-Coaching met paarden is <b>ervaringsgericht leren</b>. Als coach geef ik je in de activiteit met het paard de kans ervaringen op te doen en te ervaren wat het paard bij je oproept.
-<br>De sessie met het paard helpt je dichter bij je onbewuste, je gevoel en grenzen, je intuïtie te komen. Het is daarmee heel anders dan het dagelijks leven in onze maatschappij: waar het intellect, het hoofd, de woorden vaak voorop staan.
-<br><br>Coaching met paarden is gericht op jouw <b>persoonlijke ontwikkeling</b>. Het paard reageert op jou, zoals je bent. Als coach help ik je, door met je in gesprek te gaan, terug te geven wat ik gezien heb en open vragen te stellen. Om zo te onderzoeken welke <b>overtuigingen, patronen en sterke kanten</b> je hebt en welke overeenkomsten er zijn tussen hetgeen er gebeurt met het paard en de gevoelens en patronen in je dagelijks leven.  
+
+De sessie met het paard helpt je <b>dichter bij je gevoel</b> het onbewuste, je grenzen, je intuïtie te komen. Het is daarmee heel anders dan het dagelijks leven in onze maatschappij: waar het intellect, het hoofd, de woorden vaak voorop staan.
+<br><br>Coaching met paarden is gericht op jouw <b>persoonlijke ontwikkeling</b>. Het paard reageert op jou, zoals je bent.
+<br>Als coach help ik je door met je in gesprek te gaan: terug te geven wat ik gezien heb en open vragen te stellen. Om zo te onderzoeken welke <b>overtuigingen, patronen en sterke kanten</b> je hebt en welke overeenkomsten er zijn tussen hetgeen er gebeurt met het paard en de gevoelens en patronen in je dagelijks leven.  
 <br><br>Het contact met het paard kan ook <b>fysiek veranderingen</b> geven: minder stress-hormoon, de bloeddruk daalt en oxytocine neemt toe (dat is het hormoon dat een belangrijke rol speelt bij het verbinden van sociale contacten en bij gevoelens van plezier en geluk).
 <br><br>Coaching met paarden is <b>oplossingsgericht</b>. In de sessie kun je experimenteren met nieuw gedrag. Het paard zal daarop reageren en biedt daarmee eerlijke feedback.
 </div>
@@ -81,7 +84,7 @@ Coaching met paarden is <b>ervaringsgericht leren</b>. Als coach geef ik je in d
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
 HET PAARD ZIET JOU is geregistreerd bij:<br>
-<br>GZ-psycholoog BIG register 99050272225<br>
+<br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
 Kamer van Koophandel 82539596
