--- a/content/en/waarommetpaarden/_index.html
+++ b/content/en/waarommetpaarden/_index.html
@@ -39,7 +39,7 @@ Het paard is mijn mede-coach, mijn kompas.
 
 De sessie met het paard helpt je <b>dichter bij je gevoel</b> het onbewuste, je grenzen, je intuïtie te komen. Het is daarmee heel anders dan het dagelijks leven in onze maatschappij: waar het intellect, het hoofd, de woorden vaak voorop staan.
 <br><br>Coaching met paarden is gericht op jouw <b>persoonlijke ontwikkeling</b>. Het paard reageert op jou, zoals je bent.
-<br>Als coach help ik je door met je in gesprek te gaan: terug te geven wat ik gezien heb en open vragen te stellen. Om zo te onderzoeken welke <b>overtuigingen, patronen en sterke kanten</b> je hebt en welke overeenkomsten er zijn tussen hetgeen er gebeurt met het paard en de gevoelens en patronen in je dagelijks leven.  
+<br>Als coach help ik je door met je in gesprek te gaan: terug te geven wat ik gezien heb en open vragen te stellen. Zo kun je onderzoeken welke <b>overtuigingen, patronen en sterke kanten</b> je hebt en welke overeenkomsten er zijn tussen hetgeen er gebeurt met het paard en de gevoelens en patronen in je dagelijks leven.  
 <br><br>Het contact met het paard kan ook <b>fysiek veranderingen</b> geven: minder stress-hormoon, de bloeddruk daalt en oxytocine neemt toe (dat is het hormoon dat een belangrijke rol speelt bij het verbinden van sociale contacten en bij gevoelens van plezier en geluk).
 <br><br>Coaching met paarden is <b>oplossingsgericht</b>. In de sessie kun je experimenteren met nieuw gedrag. Het paard zal daarop reageren en biedt daarmee eerlijke feedback.
 </div>
