--- a/content/en/overmij/_index.html
+++ b/content/en/overmij/_index.html
@@ -28,17 +28,17 @@ Jij bent krachtig als je mild kunt kijken naar je eigen patronen en overtuiginge
   Toen ik op mijn 42e mijn eerste eigen paard Renzo kocht, merkte ik dat ik een spiegel voorgehouden kreeg. Ik ervaarde dat hij onmiddellijk voelde of ik wel of niet echt mezelf was. Aan de buitenkant kon ik vrolijk en energiek doen, terwijl ik me van binnen moe, somber of bang voelde; Renzo prikte daar doorheen.
 <br><br>
 Ik kreeg meer inzicht in mijn overtuiging dat ik het altijd goed moet doen om erbij te horen. Al van jongsafaan doe ik mezelf sterker, stoerder, grappiger, onafhankelijker, spannender, interessanter, perfecter voor dan dat ik mezelf voelde.
-Wat dat me opleverde waren een heleboel vrienden en vriendinnen en trotse, gerustgestelde ouders. Wat het me koste, was dat ik vaak moe was en mijn eigen wensen en gevoelens naar de achtergrond schoof. En maar weinig mensen wisten hoe ik me voelde; zelf had ik het vaak ook niet door.
+Wat dat me opleverde waren een heleboel vrienden en vriendinnen en trotse, gerustgestelde ouders. Wat het me kostte, was dat ik vaak moe was en mijn eigen wensen en gevoelens naar de achtergrond schoof. En maar weinig mensen wisten hoe ik me voelde; zelf had ik dat vaak ook niet door.
 <br><br>
-Het mooie is dat paarden onbevooroordeeld zijn en je keer op keer een kans geven. Met Renzo beleefde ik ook hele speciale momenten waarin ik verbinding voelde, me gezien en geaccepteerd voelde en waarin ik heel sterk ervaarde dat alles goed was. Geen woorden waren dan nodig. Ik ervaarde dat bij mijn paard, maar ook in de natuur, in yoga, in creatief bezig zijn of in dans; hoe ik zonder woorden dicht bij mijn innerlijke kracht kon komen.
+Het mooie is dat paarden onbevooroordeeld zijn en je keer op keer een kans geven. Met Renzo beleefde ik ook hele speciale momenten waarin ik verbinding voelde, me gezien en geaccepteerd voelde en waarin ik heel sterk ervaarde dat alles goed was. Geen woorden waren dan nodig.
 </div>
 
 <div class="col-sm -text-dark">
   <h3>
     Toen ik het motto van de coachopleiding aan de Keulseweg zag “GEEN WOORDEN MAAR PAARDEN”, wist ik dat dit bij me paste en dit draag ik nu ook uit.
-<br><br>Na mijn opleidingen ontwikkelingspsychologie en orthopedagogiek aan de Universiteit van Utrecht heb ik 25 jaar lang gewerkt in de diagnostiek en behandeling van kinderen en hun ouders. Ondanks dat ik me heel erg thuis voelde in het helpen van mensen om weer op eigen kracht verder te kunnen, vond ik het moeilijk om zelf in balans te blijven. Ik miste rust en ruimte in de behandelingen en zag in de gesprekstherapieën dat mensen veel in hun hoofd bleven. 
+<br><br>Na mijn opleidingen ontwikkelingspsychologie en orthopedagogiek aan de Universiteit van Utrecht heb ik 25 jaar lang als GZ-psycholoog gewerkt in de diagnostiek en behandeling van kinderen en hun ouders. Ondanks dat ik me heel erg thuis voelde in het helpen van mensen om weer op eigen kracht verder te kunnen, vond ik het moeilijk om zelf in balans te blijven. Ik miste rust en ruimte in de behandelingen en zag in de gesprekstherapieën dat mensen veel in hun hoofd bleven. 
 <br><br>
-Daarom besloot ik in 2017 het roer om te gooien. Ik volgde de post-HBO opleiding Equine Assisted Coaching aan de Keulseweg en in 2021 heb ik daar ook het verdiepingsjaar Equine Assisted Kindercoaching afgerond. Waardoor ik me naast paardencoach ook gediplomeerd kindercoach mag noemen. Het was altijd al mijn droom om met paarden te werken en nu doe ik waar mijn passie ligt: het helpen van kinderen en volwassen in hun ontwikkeling, met behulp van paarden.
+Daarom besloot ik in 2017 het roer om te gooien. Ik volgde de post-HBO opleiding Equine Assisted Coaching aan de Keulseweg en in 2021 heb ik daar ook het verdiepingsjaar Equine Assisted Kindercoaching afgerond. Waardoor ik me naast paardencoach ook gecertificeerd kindercoach mag noemen. Het was altijd al mijn droom om met paarden te werken en nu doe ik waar mijn passie ligt: het helpen van kinderen en volwassen in hun ontwikkeling, met behulp van paarden.
 </div>
 {{< /blocks/section >}}
 
@@ -81,7 +81,7 @@ Daarom besloot ik in 2017 het roer om te gooien. Ik volgde de post-HBO opleiding
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
 HET PAARD ZIET JOU is geregistreerd bij:<br>
-<br>GZ-psycholoog BIG register 99050272225<br>
+<br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
 Kamer van Koophandel 82539596
