--- a/content/en/praktischezaken/_index.html
+++ b/content/en/praktischezaken/_index.html
@@ -25,22 +25,22 @@ menu:
 {{< blocks/section color="secondary" >}}
 <div class="col-sm -text-dark">
 <h3>
-<b>Na jouw aanmelding</b> hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische info en een intakeformulier.
+<b>Na jouw aanmelding</b> via het mailadres onder aan de site, hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische info en een intakeformulier.
 <br><br>
 <b>Tarieven</b>
 <table>
 <tbody>
 <tr>
- <td>Coachsessie van 1 uur</td><td>€ 95,- incl. BTW</td>
+ <td>Coachsessie van 1 uur</td><td>€ 105,- incl. BTW</td>
 </tr>
 <tr>
-  <td>Coachsessie van 1,5 uur&nbsp;&nbsp;&nbsp;&nbsp;</td><td>€ 135,- incl. BTW</td>
+  <td>Coachsessie van 1,5 uur&nbsp;&nbsp;&nbsp;&nbsp;</td><td>€ 145,- incl. BTW</td>
  </tr>
  <tr>
-  <td>Coachsessie van 2 uur</td><td>€ 165,- incl. BTW</td>
+  <td>Coachsessie van 2 uur</td><td>€ 175,- incl. BTW</td>
  </tr>
 </table>
-<h4>In geval van zakelijke coaching zijn de bedragen exclusief BTW.</h4>
+<h4>Zakelijke coaching op aanvraag.</h4>
 <br>
 <h3>
 <b>Locaties</b>
@@ -48,7 +48,7 @@ menu:
   <br><b>Moordrecht</b> (gemeente Zuidplas)
   <br><b>Snelrewaard</b> (gemeente Oudewater)
   <br><b>Berkenwoude</b> (gemeente Krimpenerwaard)
-  <br>Op deze locaties worden de paarden gehouden op paardvriendelijke wijze: In een kudde met 24/7 mogelijkheden tot onderling contact, beweging en ruwvoer. Dit maakt dat de paarden zelf in balans zijn.
+  <br>Op deze locaties worden de paarden gehouden op paardvriendelijke wijze: In een kudde met 24/7 mogelijkheden tot onderling contact, beweging en ruwvoer.
 </h3>
 </div>
 <div class="col-sm -text-dark">
@@ -106,7 +106,7 @@ https://www.keulseweg.nl/onderzoek.html
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
 HET PAARD ZIET JOU is geregistreerd bij:<br>
-<br>GZ-psycholoog BIG register 99050272225<br>
+<br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
 Kamer van Koophandel 82539596
