--- a/content/en/praktischezaken/_index.html
+++ b/content/en/praktischezaken/_index.html
@@ -25,7 +25,7 @@ menu:
 {{< blocks/section color="secondary" >}}
 <div class="col-sm -text-dark">
 <h3>
-<b>Na jouw aanmelding</b> via het mailadres onder aan de site, hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische info en een intakeformulier.
+<b>Na jouw aanmelding</b> via het mailadres (onder aan de site), hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische info en een intakeformulier.
 <br><br>
 <b>Tarieven</b>
 <table>
@@ -40,7 +40,7 @@ menu:
   <td>Coachsessie van 2 uur</td><td>€ 175,- incl. BTW</td>
  </tr>
 </table>
-<h4>Zakelijke coaching op aanvraag.</h4>
+<h4>Prijzen zakelijke coaching op aanvraag.</h4>
 <br>
 <h3>
 <b>Locaties</b>
@@ -105,6 +105,7 @@ https://www.keulseweg.nl/onderzoek.html
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
+<br><br>
 HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
@@ -116,6 +117,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
+<br><br>
 HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
