--- a/content/en/kindercoaching/_index.html
+++ b/content/en/kindercoaching/_index.html
@@ -23,9 +23,8 @@ menu:
 {{< blocks/section color="secondary" >}}
 <div class="col-sm -text-dark">
   <h3>
-    Kindercoaching met paarden kan vanaf een leeftijd van 6 jaar.
-    <br>Als <b>psycholoog en coach</b> geef ik kinderen en jongeren de mogelijkheid om zich krachtiger te voelen en te vertrouwen op hun vermogen oplossingen te vinden die bij ze passen. Bijvoorbeeld wanneer ze problemen ervaren rondom:
-    <br><br>
+Kindercoaching met paarden kan vanaf een leeftijd van 6 jaar. Als <b>psycholoog en coach</b> geef ik kinderen en jongeren de mogelijkheid om zich krachtiger te voelen en te vertrouwen op hun vermogen oplossingen te vinden die bij ze passen. Bijvoorbeeld wanneer ze problemen ervaren rondom:
+<br><br>
     <ul>
 <li>Zelfvertrouwen</li>
 <li>Sociale vaardigheden en interacties</li>
@@ -49,7 +48,8 @@ Kinderen en jongeren kunnen in de omgang met het paard <b>vaardigheden oefenen</
 <br>Via de reactie van het paard, krijgt het kind direct feedback en kan het nieuw gedrag uitproberen.
 <br><br>Omdat coaching met paarden <b>ervaringsgericht leren</b> is, hoeft er minder gepraat te worden. Dit biedt een andere manier van leren dan het schoolse leren. Bovendien is het een optie voor kinderen en jongeren die het niet fijn vinden om te zitten en te praten.
 <br><br>Buiten in de natuur <b>zonder de dagelijkse stress en prikkels</b>, en geaccepteerd door het paard, hoeft het kind minder zijn muurtjes op te houden als afweer en zelfbescherming. Dan is er meer ruimte om te denken in oplossingen en te voelen wat er gebeurt.
-<br><br>Behalve individuele coaching, bied ik ook ouder-kindcoaching. Door samen met je kind te werken met paarden, kun je thema’s zoals verbinding, communicatie en vertrouwen onderzoeken en ontstaat er ruimte voor begrip, (h)erkenning en verandering.
+<br><br>Behalve individuele coaching, bied ik ook <b>ouder+kindcoaching</b>.
+<br>Door samen met je kind te werken met paarden, kun je thema’s zoals verbinding, communicatie en vertrouwen onderzoeken en ontstaat er ruimte voor begrip, (h)erkenning en verandering.
 </h3>    
 </div>
 
@@ -93,6 +93,7 @@ Kinderen en jongeren kunnen in de omgang met het paard <b>vaardigheden oefenen</
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
+<br><br>
 HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
@@ -104,6 +105,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
+<br><br>
 HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
