--- a/content/en/coaching/_index.html
+++ b/content/en/coaching/_index.html
@@ -87,7 +87,7 @@ De sessie met het paard helpt je de mogelijkheden in jezelf en situaties te herk
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -98,7 +98,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
