--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -68,7 +68,7 @@ Coaching met paarden geeft je de mogelijkheid jezelf te ontmoeten.
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -79,7 +79,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
