--- a/content/en/praktischezaken/_index.html
+++ b/content/en/praktischezaken/_index.html
@@ -44,7 +44,7 @@ menu:
 <br>
 <h3>
 <b>Locaties</b>
-<br>Er zijn momenteel 3 locaties waar ik coaching met paarden aanbied:
+<br>Er zijn 3 locaties waar ik coaching met paarden aanbied:
   <br><b>Moordrecht</b> (gemeente Zuidplas)
   <br><b>Snelrewaard</b> (gemeente Oudewater)
   <br><b>Berkenwoude</b> (gemeente Krimpenerwaard)
@@ -105,8 +105,7 @@ https://www.keulseweg.nl/onderzoek.html
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -117,8 +116,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
