--- a/content/en/praktischezaken/_index.html
+++ b/content/en/praktischezaken/_index.html
@@ -55,7 +55,8 @@ menu:
 <h3>
 <b>Praktisch</b>
 <br>
-De coachsessie vindt altijd plaats <b>naast het paard</b>; nooit op het paard. Ervaring met paarden of paardrijden is dus niet nodig. De sessies vinden buiten plaats. In de zomer vaak op de wei, in de winter in de bak of de paddock. In principe gaan de sessies altijd door, ook bij slecht weer! Pas je kleding hierop aan.
+De coachsessie vindt altijd plaats <b>naast het paard</b>; nooit op het paard. Ervaring met paarden of paardrijden is dus niet nodig.
+<br>De sessies vinden buiten plaats. In de zomer vaak op de wei, in de winter in de bak of de paddock. In principe gaan de sessies altijd door, ook bij slecht weer! Pas je kleding hierop aan.
 <br>Draag stevige, dichte schoenen die eventueel vies mogen worden. Met open schoenen (bijvoorbeeld slippers of sandalen) kunnen we niet bij de paarden.
 <br><br><b>Meer lezen</b>
 <br>Voor therapie of coaching waarbij paarden ingezet worden om mensen te helpen is de laatste jaren meer aandacht. Wil je meer lezen over wetenschappelijk onderzoek:
