--- a/content/en/kindercoaching/_index.html
+++ b/content/en/kindercoaching/_index.html
@@ -93,8 +93,7 @@ Kinderen en jongeren kunnen in de omgang met het paard <b>vaardigheden oefenen</
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -105,8 +104,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
