--- a/content/en/waarommetpaarden/_index.html
+++ b/content/en/waarommetpaarden/_index.html
@@ -83,8 +83,7 @@ De sessie met het paard helpt je <b>dichter bij je gevoel</b> het onbewuste, je 
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -95,8 +94,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
