--- a/content/en/overmij/_index.html
+++ b/content/en/overmij/_index.html
@@ -80,8 +80,7 @@ Daarom besloot ik in 2017 het roer om te gooien. Ik volgde de post-HBO opleiding
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU is geregistreerd bij:<br>
+<br><br>HET PAARD ZIET JOU is geregistreerd bij:<br>
 <br>
 Equine Assisted Coach Kreact 19200411<br>
 Zorg voor ZZP (WKKGZ) 201900937<br>
@@ -92,8 +91,7 @@ Kamer van Koophandel 82539596
 </a>
 {{% /blocks/feature %}}
 {{% blocks/feature icon="none" %}}
-<br><br>
-HET PAARD ZIET JOU maakt deel uit van:
+<br><br>HET PAARD ZIET JOU maakt deel uit van:
 <br><br>
 <a href="https://www.coachesvoorjou.nl">
   <img src="/coachesvoorjou.png" height="100"> 
