--- a/public/praktischezaken/index.html
+++ b/public/praktischezaken/index.html
@@ -208,7 +208,7 @@
 				
 <div class="col-sm -text-dark">
 <h3>
-<b>Na jouw aanmelding</b> via het mailadres (onder aan de site), hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische info en een intakeformulier.
+<b>Na jouw aanmelding</b> via het mailadres (onder aan de site), hebben we telefonisch contact. We maken kennis, jij kunt jouw vraag toelichten en we bespreken de mogelijkheden. Wanneer we een afspraak voor een coachsessie hebben gemaakt, krijg je over de mail de bevestiging, praktische infen een intakeformulier.o 
 <br><br>
 <b>Tarieven</b>
 <table>
@@ -226,12 +226,10 @@
 <h4>Prijzen zakelijke coaching op aanvraag.</h4>
 <br>
 <h3>
-<b>Locaties</b>
-<br>Er zijn 3 locaties waar ik coaching met paarden aanbied:
+<b>Locatie</b>
+<br>Coaching met paarden bied ik aan in:
   <br><b>Moordrecht</b> (gemeente Zuidplas)
-  <br><b>Snelrewaard</b> (gemeente Oudewater)
-  <br><b>Berkenwoude</b> (gemeente Krimpenerwaard)
-  <br>Op deze locaties worden de paarden gehouden op paardvriendelijke wijze: In een kudde met 24/7 mogelijkheden tot onderling contact, beweging en ruwvoer.
+  <br>Op deze locatie worden de paarden gehouden op paardvriendelijke wijze: In een kudde met 24/7 mogelijkheden tot onderling contact, beweging en ruwvoer.
 </h3>
 </div>
 <div class="col-sm -text-dark">
