Update research link in index.html

--- a/public/praktischezaken/index.html
+++ b/public/praktischezaken/index.html
@@ -242,8 +242,8 @@ De coachsessie vindt altijd plaats <b>naast het paard</b>; nooit op het paard. E
 <br><br><b>Meer lezen</b>
 <br>Voor therapie of coaching waarbij paarden ingezet worden om mensen te helpen is de laatste jaren meer aandacht. Wil je meer lezen over wetenschappelijk onderzoek:
 <br>
-<a href="https://www.keulseweg.nl/onderzoek.html">
-https://www.keulseweg.nl/onderzoek.html
+<a href="https://www.keulseweg.nl/onderzoek.php">
+https://www.keulseweg.nl/onderzoek.php
 </a>
 
 </div>
